Fixes for product details page on mobile design

--- a/public/css/product-details.css
+++ b/public/css/product-details.css
@@ -3,17 +3,17 @@
   margin-top: 2rem;
   padding: 1rem;
   border-radius: 10px;
-  box-shadow: 0px 0px 10px #333;
+  box-shadow: 0px 0px 10px #999;
   width: 90%;
-  max-width: 50rem;
+  max-width: 40rem;
   display: flex;
   gap: 2rem;
   animation: page-load ease-out 0.25s forwards;
 }
 
 .shop-product-details_container img {
-  width: 40%;
-  max-width: 10rem;
+  width: 70%;
+  max-width: 20rem;
   height: 100%;
 }
 
@@ -24,10 +24,32 @@
 }
 .shop-product-details_buttons {
   margin-top: auto;
-  max-width: 20rem;
+  max-width: 18rem;
+  display: flex;
+  gap: 1rem;
+  text-align: center;
+}
+.shop-product-details_buttons a,
+.shop-product-details_buttons button {
+  flex: 1;
 }
 .shop-product-details_header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+@media screen and (max-width: 550px) {
+  .shop-product-details_container img {
+    width: 80%;
+  }
+  .shop-product-details_container {
+    display: block;
+    text-align: center;
+  }
+  .shop-product-details_buttons {
+    margin: auto;
+    width: 100%;
+    margin-top: 1rem;
+  }
 }
